import {
  Injectable,
  UnauthorizedException,
  ConflictException,
  NotFoundException,
  BadRequestException,
  InternalServerErrorException,
} from '@nestjs/common';
import * as bcrypt from 'bcrypt';
import * as crypto from 'crypto';
import {
  RegisterRequest,
  LoginRequest,
  UserResponse,
  LoginSuccessResponse,
  User,
  UserRole,
  UserStatus,
  RegisterSuccessResponse,
  PasswordResetResponse,
  SocialProvider as ProtoSocialProvider,
} from 'types/auth/auth';
import { AuthPrismaService, RedisService, SessionData } from 'libs/common/src';
import {
  SocialProvider as PrismaSocialProvider,
  User as PrismaUser,
  UserType,
} from 'generated/prisma-user';
import { GenerateStoreToken } from 'libs/common/src/common/helper/generate-store-token';
import { SESClient, SendEmailCommand } from '@aws-sdk/client-ses';
import { getEmailVerificationTemplate } from 'libs/common/src/mail/templates/email-verification.template';
import { RpcException } from '@nestjs/microservices';

@Injectable()
export class AuthService {
  private sesClient: SESClient;

  constructor(
    private readonly prisma: AuthPrismaService,
    private readonly generateToken: GenerateStoreToken,
    private readonly redisService: RedisService,
  ) {
    this.sesClient = new SESClient({
      region: process.env.AWS_REGION || 'ap-northeast-2',
      credentials: {
        accessKeyId: process.env.AWS_ACCESS_KEY_ID ?? '',
        secretAccessKey: process.env.AWS_SECRET_ACCESS_KEY ?? '',
      },
    });
  }

  async sendOtp(email: string) {
    const limitKey = `otp_limit:${email}`; // 1ë¶„ ì œí•œìš© í‚¤
    const dailyKey = `otp_daily:${email}`; // í•˜ë£¨ ì œí•œìš© í‚¤

    // 1. 1ë¶„ ì´ë‚´ ì¬ë°œì†¡ ìš”ì²­ í™•ì¸
    const isLocked = await this.redisService.get(limitKey);
    if (isLocked) {
      throw new RpcException({
        code: 3, // INVALID_ARGUMENT (ë˜ëŠ” ìƒí™©ì— ë§ëŠ” gRPC ìƒíƒœ ì½”ë“œ)
        message: 'ë„ˆë¬´ ìì£¼ ìš”ì²­í•˜ì…¨ìŠµë‹ˆë‹¤. 1ë¶„ í›„ì— ë‹¤ì‹œ ì‹œë„í•´ì£¼ì„¸ìš”.',
      });
    }

    // 2. í•˜ë£¨ ìµœëŒ€ ë°œì†¡ íšŸìˆ˜ í™•ì¸ (10íšŒ)
    const dailyCount = (await this.redisService.get(dailyKey)) || 0;
    if (Number(dailyCount) >= 10) {
      throw new RpcException({
        code: 8, // RESOURCE_EXHAUSTED
        message: 'ì˜¤ëŠ˜ í•˜ë£¨ ì¸ì¦ ìš”ì²­ íšŸìˆ˜(10íšŒ)ë¥¼ ëª¨ë‘ ì´ˆê³¼í–ˆìŠµë‹ˆë‹¤.',
      });
    }

    // 3. OTP ìƒì„± ë° ë°œì†¡ ë¡œì§
    const otp = Math.floor(100000 + Math.random() * 900000).toString();

    const command = new SendEmailCommand({
      Source: process.env.MAIL_FROM,
      Destination: { ToAddresses: [email] },
      Message: {
        Subject: {
          Data: '[JobChaja] ì´ë©”ì¼ ì¸ì¦ë²ˆí˜¸ ì•ˆë‚´',
          Charset: 'UTF-8',
        },
        Body: {
          Html: {
            Data: this.getEmailHtmlTemplate(otp),
            Charset: 'UTF-8',
          },
        },
      },
    });

    try {
      // SES ë©”ì¼ ë°œì†¡
      await this.sesClient.send(command);

      // 4. Redis ë°ì´í„° ì—…ë°ì´íŠ¸ (ë°ì´í„°ë¥¼ ëª¨ë‘ ë¬¸ìì—´ë¡œ ë³€í™˜í•˜ì—¬ ì €ì¥)
      // OTP ë³¸ë¬¸ ì €ì¥
      await this.redisService.set(`otp:${email}`, otp, 180);

      // 1ë¶„ ì œí•œ ì„¤ì •
      await this.redisService.set(limitKey, 'locked', 60);

      // ğŸ”´ ìˆ«ì(nextCount)ë¥¼ ë¬¸ìì—´ë¡œ ë³€í™˜í•˜ì—¬ ì €ì¥ (ì¤‘ìš”)
      const nextCount = Number(dailyCount) + 1;
      await this.redisService.set(dailyKey, String(nextCount), 86400);

      return { success: true, message: 'ì¸ì¦ë²ˆí˜¸ê°€ ë°œì†¡ë˜ì—ˆìŠµë‹ˆë‹¤.' };
    } catch (error) {
      // Redis ì—ëŸ¬ì¸ì§€ SES ì—ëŸ¬ì¸ì§€ ëª…í™•íˆ ë¡œê·¸ ë‚¨ê¸°ê¸°
      console.error('ë°œì†¡ ë¡œì§ ì—ëŸ¬ ìƒì„¸:', error);
      throw new RpcException({
        code: 13,
        message: 'ì¸ì¦ë²ˆí˜¸ ì²˜ë¦¬ ì¤‘ ì˜¤ë¥˜ê°€ ë°œìƒí–ˆìŠµë‹ˆë‹¤.',
      });
    }
  }
  private getEmailHtmlTemplate(otp: string): string {
    return `
    <div style="font-family: 'Apple SD Gothic Neo', 'Malgun Gothic', sans-serif; max-width: 500px; margin: 0 auto; padding: 40px 20px; border: 1px solid #eee; border-radius: 12px;">
      <div style="text-align: center; margin-bottom: 30px;">
        <h2 style="color: #007bff; margin: 0; font-size: 28px;">JobChaja</h2>
      </div>
      <div style="background-color: #f9f9f9; padding: 30px; border-radius: 8px; text-align: center;">
        <p style="font-size: 16px; color: #555; margin-bottom: 20px;">ì•ˆë…•í•˜ì„¸ìš”. ì™¸êµ­ì¸ êµ¬ì¸êµ¬ì§ í”Œë«í¼ <b>JobChaja</b>ì…ë‹ˆë‹¤.</p>
        <p style="font-size: 14px; color: #777;">ì„œë¹„ìŠ¤ ì´ìš©ì„ ìœ„í•´ ì•„ë˜ ì¸ì¦ë²ˆí˜¸ë¥¼ ì…ë ¥í•´ ì£¼ì„¸ìš”.</p>
        <div style="margin: 30px 0; padding: 20px; background-color: #fff; border: 2px solid #007bff; border-radius: 8px; font-size: 36px; font-weight: bold; color: #007bff; letter-spacing: 8px;">
          ${otp}
        </div>
        <p style="font-size: 13px; color: #999;">ì´ ì¸ì¦ë²ˆí˜¸ëŠ” <b>3ë¶„</b> ë™ì•ˆ ìœ íš¨í•©ë‹ˆë‹¤.</p>
      </div>
      <div style="margin-top: 30px; text-align: center; font-size: 12px; color: #bbb;">
        <p>ë³¸ ë©”ì¼ì€ ë°œì‹ ì „ìš©ì…ë‹ˆë‹¤. ê¶ê¸ˆí•˜ì‹  ì ì€ ê³ ê°ì„¼í„°ë¡œ ë¬¸ì˜í•´ ì£¼ì„¸ìš”.</p>
        <p>Â© 2026 JobChaja. All rights reserved.</p>
      </div>
    </div>
    `;
  }
  // [ì‹ ê·œ] 2. ì¸ì¦ë²ˆí˜¸ ê²€ì¦
  async verifyOtp(email: string, code: string) {
    const savedOtp = await this.redisService.get(`otp:${email}`);
    if (!savedOtp || savedOtp !== code) {
      throw new BadRequestException('ì¸ì¦ë²ˆí˜¸ê°€ í‹€ë ¸ê±°ë‚˜ ë§Œë£Œë˜ì—ˆìŠµë‹ˆë‹¤.');
    }
    // ê²€ì¦ ì„±ê³µ ì‹œ 10ë¶„ì§œë¦¬ 'ì¸ì¦ í‹°ì¼“' ë°œí–‰
    await this.redisService.set(`verified_ticket:${email}`, 'true', 600);
    await this.redisService.del(`otp:${email}`);
    return { success: true, message: 'ì´ë©”ì¼ ì¸ì¦ ì„±ê³µ' };
  }

  // [ìˆ˜ì •] 3. íšŒì›ê°€ì… (ì—ëŸ¬ í•„ë“œ êµì • ë° ì¸ì¦ í‹°ì¼“ ë¡œì§ ì¶”ê°€)
  async register(request: RegisterRequest): Promise<RegisterSuccessResponse> {
    const { email, password, fullName, role } = request;

    const isVerified = await this.redisService.get(`verified_ticket:${email}`);
    if (!isVerified) {
      throw new BadRequestException('ì´ë©”ì¼ ì¸ì¦ì´ ì™„ë£Œë˜ì§€ ì•Šì•˜ìŠµë‹ˆë‹¤.');
    }

    const existingUser = await this.prisma.user.findFirst({ where: { email } });
    if (existingUser) {
      throw new ConflictException('User with this email already exists');
    }

    const hashedPassword = await bcrypt.hash(password, 10);

    // Prisma ìŠ¤í‚¤ë§ˆ(INDIVIDUAL, CORPORATE)ì— ë§ê²Œ ë§¤í•‘
    let finalUserType: UserType = UserType.INDIVIDUAL;
    if (role && role.toUpperCase() === 'CORPORATE') {
      finalUserType = UserType.CORPORATE;
    }

    await this.prisma.user.create({
      data: {
        email,
        password: hashedPassword,
        fullName,
        userType: finalUserType,
      },
    });

    await this.redisService.del(`verified_ticket:${email}`);

    return { success: true, message: 'User registered successfully' };
  }

  // [ìˆ˜ì •] 4. ë¡œê·¸ì¸ (user.role -> user.userType êµì •)
  async login(request: LoginRequest): Promise<LoginSuccessResponse> {
    const { email, password } = request;

    const user = await this.prisma.user.findFirst({
      where: { email },
    });

    if (!user || !user.password) {
      throw new UnauthorizedException('Invalid credentials');
    }

    const isPasswordValid = await bcrypt.compare(password, user.password);
    if (!isPasswordValid) {
      throw new UnauthorizedException('Invalid credentials');
    }

    // role ëŒ€ì‹  userType ì‚¬ìš©
    const payload = { userId: user.id, email: user.email, role: user.userType };
    const sessionId = await this.generateToken.generate(payload);
    const accessToken = await this.getAccessTokenFromSession(sessionId);

    return {
      success: true,
      sessionId,
      message: 'Login successful',
      accessToken,
      user: this.mapPrismaUserToProto(user),
    };
  }

  async getProfile(sessionId: string): Promise<UserResponse> {
    const sessionDataStr = await this.redisService.get(`session:${sessionId}`);
    if (!sessionDataStr)
      throw new UnauthorizedException('Invalid or expired session');

    const sessionData = JSON.parse(sessionDataStr) as SessionData;
    const user = await this.prisma.user.findUnique({
      where: { id: sessionData.userId },
    });

    if (!user) throw new NotFoundException('User not found');

    return {
      success: true,
      message: 'Profile retrieved successfully',
      user: this.mapPrismaUserToProto(user),
    };
  }

  // [ìˆ˜ì •] 5. ë¹„ë°€ë²ˆí˜¸ ì¬ì„¤ì • (verificationToken í…Œì´ë¸” ë¯¸ì¡´ì¬ ì—ëŸ¬ í•´ê²°ì„ ìœ„í•´ Redis ë°©ì‹ ê¶Œì¥)
  // í˜„ì¬ ì—ëŸ¬ê°€ ë°œìƒí•˜ëŠ” êµ¬ê°„ì´ë¯€ë¡œ, ì¼ë‹¨ ì£¼ì„ ì²˜ë¦¬í•˜ê±°ë‚˜ Redis ë°©ì‹ìœ¼ë¡œ ì „í™˜í•´ì•¼ í•¨
  async requestPasswordReset(email: string): Promise<PasswordResetResponse> {
    const user = await this.prisma.user.findFirst({ where: { email } });
    if (!user) throw new NotFoundException('User does not exist');

    if (user.socialProvider && user.socialProvider !== 'NONE') {
      throw new BadRequestException(
        'ì†Œì…œ ë¡œê·¸ì¸ ê³„ì •ì€ ë¹„ë°€ë²ˆí˜¸ ì´ˆê¸°í™”ë¥¼ ì‚¬ìš©í•  ìˆ˜ ì—†ìŠµë‹ˆë‹¤.',
      );
    }

    const token = crypto.randomBytes(32).toString('hex');
    await this.redisService.set(`pw_reset:${token}`, user.id, 3600);

    // Send password reset email via SES (background)
    setImmediate(async () => {
      const resetUrl = `${process.env.FRONTEND_URL || 'http://localhost:3000'}/reset-password?token=${token}`;
      const command = new SendEmailCommand({
        Source: process.env.MAIL_FROM,
        Destination: { ToAddresses: [email] },
        Message: {
          Subject: {
            Data: '[JobChaja] ë¹„ë°€ë²ˆí˜¸ ì¬ì„¤ì • ì•ˆë‚´',
            Charset: 'UTF-8',
          },
          Body: {
            Html: {
              Data: `
                <div style="font-family: 'Apple SD Gothic Neo', 'Malgun Gothic', sans-serif; max-width: 500px; margin: 0 auto; padding: 40px 20px;">
                  <h2 style="color: #007bff;">JobChaja ë¹„ë°€ë²ˆí˜¸ ì¬ì„¤ì •</h2>
                  <p>ì•„ë˜ ë§í¬ë¥¼ í´ë¦­í•˜ì—¬ ë¹„ë°€ë²ˆí˜¸ë¥¼ ì¬ì„¤ì •í•´ì£¼ì„¸ìš”.</p>
                  <a href="${resetUrl}" style="display: inline-block; padding: 12px 24px; background-color: #007bff; color: #fff; text-decoration: none; border-radius: 6px;">ë¹„ë°€ë²ˆí˜¸ ì¬ì„¤ì •</a>
                  <p style="margin-top: 20px; font-size: 13px; color: #999;">ì´ ë§í¬ëŠ” 1ì‹œê°„ ë™ì•ˆ ìœ íš¨í•©ë‹ˆë‹¤.</p>
                </div>
              `,
              Charset: 'UTF-8',
            },
          },
        },
      });

      try {
        await this.sesClient.send(command);
        console.log(`[AWS SES ì „ì†¡ ì„±ê³µ] Password reset email to: ${email}`);
      } catch (error) {
        console.error('[AWS SES ì „ì†¡ ì‹¤íŒ¨] Password reset email:', error);
      }
    });

    return {
      message: 'ë¹„ë°€ë²ˆí˜¸ ì¬ì„¤ì • ì´ë©”ì¼ì´ ë°œì†¡ë˜ì—ˆìŠµë‹ˆë‹¤.',
    };
  }

  async resetPassword(token: string, newPw: string) {
    const userId = await this.redisService.get(`pw_reset:${token}`);
    if (!userId) {
      throw new BadRequestException('ìœ íš¨í•˜ì§€ ì•Šê±°ë‚˜ ë§Œë£Œëœ í† í°ì…ë‹ˆë‹¤.');
    }

    const user = await this.prisma.user.findUnique({ where: { id: userId } });
    if (!user) throw new NotFoundException('User not found');

    const hashedPassword = await bcrypt.hash(newPw, 10);
    await this.prisma.user.update({
      where: { id: user.id },
      data: { password: hashedPassword },
    });

    await this.redisService.del(`pw_reset:${token}`);

    return { success: true, message: 'ë¹„ë°€ë²ˆí˜¸ê°€ ì¬ì„¤ì •ë˜ì—ˆìŠµë‹ˆë‹¤.' };
  }

  async logout(sessionId: string): Promise<RegisterSuccessResponse> {
    const exists = await this.redisService.exists(`session:${sessionId}`);
    if (!exists) throw new UnauthorizedException('Invalid or expired session');

    await this.redisService.del(`session:${sessionId}`);
    return { success: true, message: 'Logout successful' };
  }

  async findOrCreateOAuthUser(profile: {
    email?: string;
    firstName?: string;
    lastName?: string;
    picture?: string;
    provider: ProtoSocialProvider;
    providerId: string;
  }) {
    const prismaProvider = this.mapProtoToPrismaSocialProvider(
      profile.provider,
    );
    const existingSocialAuth = await this.prisma.socialAuth.findFirst({
      where: { provider: prismaProvider, providerId: profile.providerId },
      include: { user: true },
    });

    if (existingSocialAuth) {
      const payload = {
        userId: existingSocialAuth.user.id,
        email: existingSocialAuth.user.email,
        role: existingSocialAuth.user.userType,
      };
      const sessionId = await this.generateToken.generate(payload);
      const accessToken = await this.getAccessTokenFromSession(sessionId);

      return {
        success: true,
        sessionId,
        message: 'Login successful',
        accessToken,
        user: this.mapPrismaUserToProto(existingSocialAuth.user),
      };
    }

    let user: PrismaUser | null = null;
    if (profile.email) {
      user = await this.prisma.user.findFirst({
        where: { email: profile.email },
      });
    }

    if (!user) {
      const fullName =
        [profile.firstName, profile.lastName].filter(Boolean).join(' ') || null;
      let email =
        profile.email || `${prismaProvider}_${profile.providerId}@oauth.local`;
      user = await this.prisma.user.create({
        data: { email, fullName, userType: UserType.INDIVIDUAL },
      });
    }

    return { success: true, message: 'OAuth Login Ready' };
  }

  // --- í—¬í¼ ë©”ì„œë“œ (í•„ë“œëª… ì—ëŸ¬ í•´ê²° í•µì‹¬) ---

  private async getAccessTokenFromSession(
    sessionId: string,
  ): Promise<string | undefined> {
    const sessionDataStr = await this.redisService.get(`session:${sessionId}`);
    if (sessionDataStr) {
      const sessionData = JSON.parse(sessionDataStr) as SessionData;
      return sessionData.accessToken;
    }
    return undefined;
  }

  private mapPrismaUserToProto(user: PrismaUser): User {
    // ì—ëŸ¬ í•´ê²°: Prisma ìŠ¤í‚¤ë§ˆì— ì—†ëŠ” í•„ë“œëŠ” ê¸°ë³¸ê°’ìœ¼ë¡œ ëŒ€ì‘
    return {
      id: user.id,
      role: this.mapUserRole(user.userType), // user.role -> user.userType
      email: user.email || undefined,
      phone: undefined, // ìŠ¤í‚¤ë§ˆì— ì—†ìœ¼ë¯€ë¡œ undefined
      fullName: user.fullName || undefined,
      status: UserStatus.ACTIVE, // ìŠ¤í‚¤ë§ˆ í•„ë“œ ë¶€ì¬ë¡œ ê¸°ë³¸ê°’ ë§¤í•‘
      isEmailedVerified: true,
      isPhoneVerified: false,
      walletId: undefined, // ìŠ¤í‚¤ë§ˆ í•„ë“œ ë¶€ì¬
      createdAt: user.createdAt.toISOString(),
      updatedAt: user.updatedAt.toISOString(),
    };
  }

  private mapUserRole(role: string): UserRole {
    const roleMap: Record<string, UserRole> = {
      GUEST: UserRole.GUEST,
      MEMBER: UserRole.MEMBER,
      CORPORATE: UserRole.CORPORATE,
      ADMIN: UserRole.ADMIN,
      SUPERADMIN: UserRole.SUPERADMIN,
    };
    return roleMap[role] || UserRole.USER_ROLE_UNSPECIFIED;
  }

  private mapUserStatus(status: string): UserStatus {
    const statusMap: Record<string, UserStatus> = {
      PENDING: UserStatus.PENDING,
      ACTIVE: UserStatus.ACTIVE,
    };
    return statusMap[status] || UserStatus.USER_STATUS_UNSPECIFIED;
  }

  private mapProtoToPrismaSocialProvider(
    protoProvider: ProtoSocialProvider,
  ): PrismaSocialProvider {
    const providerMap: Record<ProtoSocialProvider, PrismaSocialProvider> = {
      [ProtoSocialProvider.GOOGLE]: 'GOOGLE' as PrismaSocialProvider,
      [ProtoSocialProvider.FACEBOOK]: 'FACEBOOK' as PrismaSocialProvider,
      [ProtoSocialProvider.KAKAO]: 'KAKAO' as PrismaSocialProvider,
      [ProtoSocialProvider.APPLE]: 'APPLE' as PrismaSocialProvider,
      [ProtoSocialProvider.UNRECOGNIZED]: 'GOOGLE' as PrismaSocialProvider,
    };
    return providerMap[protoProvider] || ('GOOGLE' as PrismaSocialProvider);
  }
}
